--- a/assets/sass/layout/_banner.scss
+++ b/assets/sass/layout/_banner.scss
@@ -78,8 +78,8 @@
 			background-image:		/*linear-gradient(to top, transparentize(_palette(bg), 0.2), transparentize(_palette(bg), 0.2)),
 									*/ url('../../images/bg.jpg');
 
-			background-size:		auto,
-									cover;
+			background-size:		auto;
+									
 
 			background-position:	center,
 									center;
