--- a/assets/sass/layout/_banner.scss
+++ b/assets/sass/layout/_banner.scss
@@ -78,7 +78,7 @@
 			background-image:		/*linear-gradient(to top, transparentize(_palette(bg), 0.2), transparentize(_palette(bg), 0.2)),
 									*/ url('../../images/bg.jpg');
 
-			background-size:		auto;
+			background-size:	cover;
 									
 
 			background-position:	center,
