--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3466,8 +3466,7 @@ input, select, textarea {
 				padding: 7em 0 8.25em 0 ;
 				/*background-color: #2e3141;*/
 				background-image: /*linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)),*/ url("../../images/bg.jpg");
-				background-size: auto,
- cover;
+				background-size: cover;
 				background-position: center,
  center;
 				margin-bottom: -6.5em;
