--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -39,8 +39,7 @@
 		background-image:		/*linear-gradient(to top, transparentize(_palette(bg), 0.2), transparentize(_palette(bg), 0.2)),
 								*/ url('../../images/bg.jpg');
 
-		background-size:		auto,
-								cover;
+		background-size:		cover;
 
 		background-attachment:	fixed,
 								fixed;
