--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,8 +100,7 @@ input, select, textarea {
 
 	body {
 		background-image: /*linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),*/ url("../../images/bg.jpg");
-		background-size: auto,
- cover;
+		background-size: cover;
 		background-attachment: fixed,
  fixed;
 		background-position: center,
